--- a/src/OSlight.App/Views/abrirOs/AtualizarEndereco.cshtml
+++ b/src/OSlight.App/Views/abrirOs/AtualizarEndereco.cshtml
@@ -8,11 +8,16 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="AtualizarEndereco">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Endereco.AbrirOSId"/>
-            <input type="hidden" asp-for="Endereco.Id"/>
+            <input type="hidden" asp-for="Endereco.AbrirOSId" />
+            <input type="hidden" asp-for="Endereco.Id" />
+            <div class="form-group">
+                <label asp-for="Endereco.Cep" class="control-label"></label>
+                <input asp-for="Endereco.Cep" class="form-control" />
+                <span asp-validation-for="Endereco.Cep" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Endereco.Logradouro" class="control-label"></label>
                 <input asp-for="Endereco.Logradouro" class="form-control" />
@@ -34,11 +39,6 @@
                 <span asp-validation-for="Endereco.Bairro" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Endereco.Cep" class="control-label"></label>
-                <input asp-for="Endereco.Cep" class="form-control" />
-                <span asp-validation-for="Endereco.Cep" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Endereco.Cidade" class="control-label"></label>
                 <input asp-for="Endereco.Cidade" class="form-control" />
                 <span asp-validation-for="Endereco.Cidade" class="text-danger"></span>
@@ -49,7 +49,7 @@
                 <span asp-validation-for="Endereco.Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
                 <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
             </div>
         </form>
@@ -59,4 +59,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        buscarcep();
+    </script>
 }
