--- a/src/OSlight.App/Views/abrirOs/Create.cshtml
+++ b/src/OSlight.App/Views/abrirOs/Create.cshtml
@@ -8,7 +8,7 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <form asp-action="Create">
             <input asp-for="Status" value="1" hidden class="form-control" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -59,5 +59,6 @@
             selector: '#mytextarea'
         });
         showEnd();
+        buscarcep();
     </script>
 }
