--- a/src/OSlight.App/Views/abrirOs/Edit.cshtml
+++ b/src/OSlight.App/Views/abrirOs/Edit.cshtml
@@ -8,11 +8,17 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-10">
         <form asp-action="Edit">
-            <input asp-for="Status" value="1" hidden />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <select class="form-control" asp-for="Status">
+                    <option value="1">Aberto</option>
+                    <option value="2">Fechado</option>
+                </select>
+            </div>
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
@@ -40,7 +46,7 @@
             </div>
             <partial name="_ListarEndereco" />
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
                 <a class="btn btn-info" asp-action="Index">Voltar</a>
             </div>
         </form>
