--- a/src/OSlight.App/Views/abrirOs/_EnderecoOS.cshtml
+++ b/src/OSlight.App/Views/abrirOs/_EnderecoOS.cshtml
@@ -3,12 +3,12 @@
 
 <div class="form-group">
     <label asp-for="Endereco.Cep" class="control-label"></label>
-    <input asp-for="Endereco.Cep" class="form-control" />
+    <input id="cep" asp-for="Endereco.Cep" class="form-control" />
     <span asp-validation-for="Endereco.Cep" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="Endereco.Logradouro" class="control-label"></label>
-    <input asp-for="Endereco.Logradouro" class="form-control" />
+    <input id="logradouro" asp-for="Endereco.Logradouro" class="form-control" />
     <span asp-validation-for="Endereco.Logradouro" class="text-danger"></span>
 </div>
 <div class="form-group">
@@ -23,17 +23,17 @@
 </div>
 <div class="form-group">
     <label asp-for="Endereco.Bairro" class="control-label"></label>
-    <input asp-for="Endereco.Bairro" class="form-control" />
+    <input id="bairro" asp-for="Endereco.Bairro" class="form-control" />
     <span asp-validation-for="Endereco.Bairro" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="Endereco.Cidade" class="control-label"></label>
-    <input asp-for="Endereco.Cidade" class="form-control" />
+    <input id="localidade" asp-for="Endereco.Cidade" class="form-control" />
     <span asp-validation-for="Endereco.Cidade" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="Endereco.Estado" class="control-label"></label>
-    <input asp-for="Endereco.Estado" class="form-control" />
+    <input id="uf" asp-for="Endereco.Estado" class="form-control" />
     <span asp-validation-for="Endereco.Estado" class="text-danger"></span>
 </div>
 
