--- a/src/OSlight.App/Views/fecharOs/_Details.cshtml
+++ b/src/OSlight.App/Views/fecharOs/_Details.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="col-sm-8">
             <label style="font-weight: bold;" asp-for="FecharOS.Descricao"></label>
-            <textarea rows="15" id="descricaofinal" asp-for="FecharOS.Descricao">@Model.FecharOS.Descricao</textarea>
+            <textarea style="resize: none" style="resize: none" rows="15" id="descricaofinal" asp-for="FecharOS.Descricao">@Model.FecharOS.Descricao</textarea>
         </div>
     </div>
 </div>
