--- a/src/OSlight.App/Views/abrirOs/Create.cshtml
+++ b/src/OSlight.App/Views/abrirOs/Create.cshtml
@@ -6,12 +6,11 @@
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-
 <div class="row">
     <div class="col-md-8">
         <form asp-action="Create">
-            <input asp-for="Status" value="1" hidden class="form-control" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="Status" value="1" hidden class="form-control" />
             <div class="form-group">
                 <label asp-for="Titulo" class="control-label"></label>
                 <input asp-for="Titulo" class="form-control" />
@@ -40,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <textarea rows="15" id="mytextarea" asp-for="Descricao"></textarea>
+                <textarea style="resize: none" rows="15" id="descricao" asp-for="Descricao"></textarea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -51,12 +50,11 @@
     </div>
 </div>
 
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script type="text/javascript">
         tinymce.init({
-            selector: '#mytextarea'
+            selector: '#descricao'
         });
         showEnd();
         buscarcep();
