--- a/src/OSlight.App/Views/fecharOs/Edit.cshtml
+++ b/src/OSlight.App/Views/fecharOs/Edit.cshtml
@@ -24,12 +24,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <textarea rows="15" id="descricaofinal" asp-for="Descricao">@Model.Descricao</textarea>
+                <textarea style="resize: none" rows="15" id="descricaofinal" asp-for="Descricao">@Model.Descricao</textarea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-success" />
-                <a class="btn btn-info" asp-action="Index">Votlar</a>
+                <a class="btn btn-info" href="javascript:window.history.back();">Voltar</a>
             </div>
         </form>
     </div>
